--- a/wp-content/themes/tile_kiosk/style.css
+++ b/wp-content/themes/tile_kiosk/style.css
@@ -1425,10 +1425,14 @@ body.view-info{
 #tk-showcase{
 	position: fixed;
 	top: 0;
-	
 	width: 100%;
 	height: 100vh;
 	overflow: scroll hidden; 
+	transition: opacity ease-in-out 2s;
+}
+
+.detached #tk-showcase{
+	opacity: 0;
 }
 
 #tk-showcase .itm-wrapper{
@@ -2313,20 +2317,6 @@ body.view-info{
 	.modal .tk-compontents-wrapper{
 		grid-template-columns: repeat( 4, 1fr );
 		grid-template-rows: repeat( 12, 1fr );	
-		/*
-		grid-template-areas: "gallery gallery gallery title"
-                             "gallery gallery gallery title"
-                             "gallery gallery gallery title"
-                             "gallery gallery gallery title"
-                             "gallery gallery gallery title"
-                             "gallery gallery gallery title"
-                             "gallery gallery gallery title"			
-                             "gallery gallery gallery price"
-                             "desc    desc    desc    desc"
-                             "buy     buy     buy     buy"
-                             "buy     buy     buy     buy"
-                             "buy     buy     buy     buy";
-		*/
 		grid-template-areas: "title title title title"
                              "gallery gallery gallery gallery"
                              "gallery gallery gallery gallery"
@@ -2338,7 +2328,8 @@ body.view-info{
                              "desc    desc    desc    desc"
                              "buy     buy     buy     buy"
                              "buy     buy     buy     buy"
-                             "buy     buy     buy     buy";		
+                             "buy     buy     buy     buy";
+		padding-bottom: 50px;
 	}
 	
 	.wps-component-products-images{
