--- a/wp-content/themes/tile_kiosk/style.css
+++ b/wp-content/themes/tile_kiosk/style.css
@@ -1530,7 +1530,7 @@ body.view-info{
 	background: white;
 }
 
-
+/*
 .page .wps-items-list
 {
     display: grid;
@@ -2100,7 +2100,6 @@ body.view-info{
 }
 
 .wps-product-image-sold-out-label{
-	z-index: 3;
 	background: none !important;
 /*	border: 1px solid black !important; */
 	color: black !important;
@@ -2108,7 +2107,6 @@ body.view-info{
 
 
 .wps-product-image-sold-out-label{
-	z-index: 3;
 	background: none !important;
 	width: 100%;
 	height: 100%;
