--- a/wp-content/themes/tile_kiosk/style.css
+++ b/wp-content/themes/tile_kiosk/style.css
@@ -2128,6 +2128,7 @@ body.view-info{
 }
 
 .wps-product-image-sold-out-label{
+	z-index: 1;
 	background: none !important;
 /*	border: 1px solid black !important; */
 	color: black !important;
@@ -2143,9 +2144,15 @@ body.view-info{
 	font-size: 0 !important;
 }
 
+/*
 .modal .wps-product-image-sold-out-label{
 	width: 100% !important;
 	height: 100% !important;
+}
+*/
+
+.wps-modal-open .wps-product-image-sold-out-label{
+	z-index: unset;
 }
 
 .wps-product-image-sold-out-label::before,
