--- a/wp-content/themes/tile_kiosk/style.css
+++ b/wp-content/themes/tile_kiosk/style.css
@@ -1011,12 +1011,6 @@ textarea {
 # Basic Styling
 --------------------------------------------------------------*/
 
-html,
-body
-{
-/*	overflow-x: hidden; */
-}
-
 body{
 	font-family: var(--type-face);
 	color: var(--ui-text-color);
@@ -1073,7 +1067,7 @@ a:visited{
 
 .site-header .menu-tk-menu-container{
 	position: absolute;
-	right: 0;
+	right: 15px;
 	margin-right: 5px;
 }
 
@@ -1247,12 +1241,14 @@ a[title="TK-Info"]{
 	height: 100%;
 }
 
+/*
 .view-filter a[title="TK-Filter"],
 .view-filter a[title="TK-Info"],
 .view-filter .wps-btn-cart
 {
-/*	filter: invert( 100% ); */
+	filter: invert( 100% ); 
 }
+*/
 
 .view-filter a[title="TK-Filter"]{
 	filter: invert( 50% );
@@ -2279,6 +2275,11 @@ body.view-info{
 
 .drift-open{
 	z-index: 2;
+}
+
+
+.ReactModal__Content--after-open .wps-modal-row [class*="noticeStyles-Notice"]{
+    display: none !important;
 }
 
 
